@@ -1184,7 +1184,8 @@ var lmsQueue = Vue.component("lms-queue", {
         clearSelection() {
             this.lastSelect = undefined;
             var selection = Array.from(this.selection);
-            for (var i=0, len=selection.length; i<len; ++i) {
+            var numSelected = selection.length;
+            for (var i=0, len=numSelected; i<len; ++i) {
                 var index = selection[i];
                 if (index>-1 && index<this.items.length) {
                     var idx = this.items[index].actions.indexOf(UNSELECT_ACTION);
@@ -1199,6 +1200,12 @@ var lmsQueue = Vue.component("lms-queue", {
             lmsQueueSelectionActive = false;
             bus.$emit('queueSelection', false);
             this.resetCloseTimer();
+            if (numSelected>0) {
+                // When using recycler view items can sometimes still look selected until interact with view.
+                // Add an item, and then removing seems to work-around this...
+                this.items.push({id:"fake", title:'', artistAlbum:'', key:"fake."+this.items.length});
+                setTimeout(function () { this.items.splice(this.items.length-1, 0); }.bind(this), 50);
+            }
         },
         select(item, index, event) {
             if (this.selection.size>0) {
