@@ -13,6 +13,7 @@ x.x.x
  9. Show full server-side interface settings page, but add a note that not all
     settings affect Material Skin.
 10. Change defaults; use colour from cover, tinted background, unpinned queue.
+11. Work-around item selection apparing 'stuck' after clear selection.
 
 5.3.4
 -----
